# dialog-rs

./: .gitignore  Cargo.toml  README.md
examples/: file_selection.rs  question.rs
src/: lib.rs
src/backends/: dialog.rs  mod.rs
